manifests/templates/answer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: answer
  labels:
    tier: backend
    solution: asqa
    app.kubernetes.io/name: answer
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: asqa
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: answer
      tier: backend
      solution: asqa
  template:
    metadata:
      labels:
        app: answer
        tier: backend
        solution: asqa
    spec:
      containers:
      - image: 449682673987.dkr.ecr.eu-central-1.amazonaws.com/asqa-answer:0.1.0
        name: asqa-answer
        imagePullPolicy: IfNotPresent

        resources:
          requests:
            cpu: 2
            memory: 2G
          limits:
            cpu: 4
            memory: 4G
          
        ports:
        - name: main-port
          containerPort: 80
        
        livenessProbe:
          httpGet:
            path: /graphql
            port: main-port
      
        readinessProbe:
          httpGet:
            path: /graphql
            port: main-port

        startupProbe:
          httpGet:
            path: /graphql
            port: main-port
          failureThreshold: 30
          periodSeconds: 10 # 30 * 10 = 300s = 5m for start
      imagePullSecrets:
      - name: regcred # aws
---
apiVersion: v1
kind: Service
metadata:
  name: answer
  labels:
    app: answer
    tier: backend
    solution: asqa
    app.kubernetes.io/name: answer
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: asqa
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: answer
    tier: backend
    solution: asqa
