manifests/templates/search.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search
  labels:
    tier: backend
    solution: asqa
    app.kubernetes.io/name: search
    app.kubernetes.io/version: "%VERSION%"
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: asqa
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: search
      tier: backend
      solution: asqa
  template:
    metadata:
      labels:
        app: search
        tier: backend
        solution: asqa
    spec:
      containers:
      - image: 449682673987.dkr.ecr.eu-central-1.amazonaws.com/asqa-search:%VERSION%
        name: asqa-search
        imagePullPolicy: IfNotPresent

        resources:
          requests:
            cpu: 2
            memory: 12G
          limits:
            cpu: 6
            memory: 16G
          
        ports:
        - name: main-port
          containerPort: 80
        
        livenessProbe:
          httpGet:
            path: /graphql
            port: main-port
      
        readinessProbe:
          httpGet:
            path: /graphql
            port: main-port

        startupProbe:
          httpGet:
            path: /graphql
            port: main-port
          failureThreshold: 30
          periodSeconds: 20 # 30 * 20 = 600s = 10m for start
      imagePullSecrets:
      - name: regcred # aws
---
apiVersion: v1
kind: Service
metadata:
  name: search
  labels:
    app: search
    tier: backend
    solution: asqa
    app.kubernetes.io/name: search
    app.kubernetes.io/version: "%VERSION%"
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: asqa
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: search
    tier: backend
    solution: asqa
